yamls/ingress-demo/traefik/simple-ingress-routes/1-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cheddar
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`cheddar.lsports.cloud`)
      kind: Rule
      services:
        - name: cheddar
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: stilton
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`tnuva.lsports.cloud`)
      kind: Rule
      services:
        - name: stilton
          port: 80
